tests/__snapshots__/api-toEqual.test.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toEqual: stderr 1`] = `
"Error: Type '{ first: string; last: string; }' is not identical to type 'Names'.

  27 |     expect<Names>().type.toEqual<{ first: string; last?: string }>();
  28 | 
> 29 |     expect<Names>().type.toEqual<{ first: string; last: string }>();
     |                          ^
  30 |   });
  31 | 
  32 |   test("does NOT equal expected type", () => {

       at ./__typetests__/toEqual.tst.ts:29:26 ❭ received type ❭ equals expected type

Error: Type '{ first: string; last?: string | undefined; }' is identical to type 'Names'.

  33 |     expect<Names>().type.not.toEqual<{ first: string; last: string }>();
  34 | 
> 35 |     expect<Names>().type.not.toEqual<{ first: string; last?: string }>();
     |                              ^
  36 |   });
  37 | 
  38 |   test("equals expected value", () => {

       at ./__typetests__/toEqual.tst.ts:35:30 ❭ received type ❭ does NOT equal expected type

Error: Type 'Names' is not identical to type '{ first: string; last: string; }'.

  40 |     expect<{ first: string; last?: string }>().type.toEqual(getNames());
  41 | 
> 42 |     expect<{ first: string; last: string }>().type.toEqual(getNames());
     |                                                    ^
  43 |   });
  44 | 
  45 |   test("does NOT equal expected value", () => {

       at ./__typetests__/toEqual.tst.ts:42:52 ❭ received type ❭ equals expected value

Error: Type 'Names' is identical to type '{ first: string; last?: string | undefined; }'.

  46 |     expect<{ first: string; last: string }>().type.not.toEqual(getNames());
  47 | 
> 48 |     expect<{ first: string; last?: string }>().type.not.toEqual(getNames());
     |                                                         ^
  49 |   });
  50 | });
  51 | 

       at ./__typetests__/toEqual.tst.ts:48:57 ❭ received type ❭ does NOT equal expected value

Error: Type '{ first: string; last: string; }' is not identical to type 'Names'.

  55 |     expect(getNames()).type.toEqual<Names>();
  56 | 
> 57 |     expect(getNames()).type.toEqual<{ first: string; last: string }>();
     |                             ^
  58 |   });
  59 | 
  60 |   test("does NOT equal expected type", () => {

       at ./__typetests__/toEqual.tst.ts:57:29 ❭ received value ❭ equals expected type

Error: Type '{ first: string; last?: string | undefined; }' is identical to type 'Names'.

  61 |     expect(getNames()).type.not.toEqual<{ first: string; last: string }>();
  62 | 
> 63 |     expect(getNames()).type.not.toEqual<{ first: string; last?: string }>();
     |                                 ^
  64 |   });
  65 | 
  66 |   test("equals expected value", () => {

       at ./__typetests__/toEqual.tst.ts:63:33 ❭ received value ❭ does NOT equal expected type

Error: Type 'Size' is not identical to type '{ height: number; }'.

  67 |     expect({ height: 14, width: 25 }).type.toEqual(getSize());
  68 | 
> 69 |     expect({ height: 14 }).type.toEqual(getSize());
     |                                 ^
  70 |   });
  71 | 
  72 |   test("does NOT equal expected value", () => {

       at ./__typetests__/toEqual.tst.ts:69:33 ❭ received value ❭ equals expected value

Error: Type 'Size' is identical to type '{ height: number; width: number; }'.

  73 |     expect({ height: 14 }).type.not.toEqual(getSize());
  74 | 
> 75 |     expect({ height: 14, width: 25 }).type.not.toEqual(getSize());
     |                                                ^
  76 |   });
  77 | });
  78 | 

       at ./__typetests__/toEqual.tst.ts:75:48 ❭ received value ❭ does NOT equal expected value

"
`;

exports[`toEqual: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

fail ./__typetests__/toEqual.tst.ts
  + edge cases
  received type
    × equals expected type
    × does NOT equal expected type
    × equals expected value
    × does NOT equal expected value
  received value
    × equals expected type
    × does NOT equal expected type
    × equals expected value
    × does NOT equal expected value

Targets:    1 failed, 1 total
Test files: 1 failed, 1 total
Tests:      8 failed, 1 passed, 9 total
Assertions: 8 failed, 14 passed, 22 total
Duration:   <<timestamp>>

Ran all test files.
"
`;
